<resources>
    <string name="app_name">huidefeng</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="bottom_nav_home">首页</string>
    <string name="bottom_nav_money">复投</string>
    <string name="bottom_nav_market">团队</string>
    <string name="bottom_nav_user">会员中心</string>

    <string name="user_recharge">充值</string>
    <string name="user_balance">实时业绩</string>
    <string name="user_score">积分明细</string>
    <string name="user_withdraw">提现</string>
    <string name="user_atlas">团队人数</string>
    <string name="user_notice">会员公告</string>
    <string name="user_security">安全设置</string>
    <string name="user_info">账户信息</string>
    <string name="user_download">APP下载</string>
    <string name="user_logout">退出账号</string>
    <string name="user_placeholder">-</string>

    <string name="user_show_balance">余额</string>
    <string name="user_show_score">积分</string>
    <string name="user_show_performance">业绩</string>
    <string name="user_show_commission">佣金</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_to_exit">是否退出App?</string>
    <string name="user_to_exit_disp">退出将不会收到实时消息提示!</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_name">用户名(手机号)</string>
    <string name="user_password">密码</string>
    <string name="user_invitation_code">邀请码</string>
    <string name="user_auth_code">验证码</string>

    <string name="warning_tips1">账号或密码不可为空！请检查后重新输入</string>
    <string name="warning_tips2">手机号输入不正确！请检查后重新输入</string>
    <string name="warning_tips3">密码太短！请重新输入</string>

    <string name="sum_score">可投入积分</string>
    <string name="consume_score">投入积分</string>
</resources>
