<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:contentPadding="10dp"
        android:id="@+id/cardview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/money_score"
                    android:text="@string/user_show_score"
                    android:background="@drawable/background_button_select"
                    />
                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/money_balance"
                    android:text="@string/user_show_commission"
                    android:background="@drawable/background_button_select"
                    />

            </LinearLayout>

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginHorizontal="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/curr_score"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    tools:text="可投入积分:200"
                    android:layout_marginVertical="20dp"
                    />
                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasClearButton="false"
                    app:endIcon="@drawable/cancel"
                    app:labelText="@string/consume_score"
                    app:panelBackgroundColor="@color/white"
                    app:primaryColor="@color/text_color_title"
                    app:secondaryColor="@color/colorPrimary"
                    android:id="@+id/consume_value_cont"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/consume_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <Button
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/consume_sumbit"
                    android:text="@string/bottom_nav_money"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:background="@drawable/button_background_corner"
                    android:textColor="@color/text_color_title"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/welcome_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_login" />

</androidx.constraintlayout.widget.ConstraintLayout>