<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/login_cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:contentPadding="10dp"
        android:id="@+id/cardview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasClearButton="false"
                    app:endIcon="@drawable/cancel"
                    app:labelText="@string/user_name"
                    app:minCharacters="11"
                    app:maxCharacters="11"
                    android:id="@+id/register_user_cont"
                    app:panelBackgroundColor="@color/white"
                    app:primaryColor="@color/text_color_title"
                    app:secondaryColor="@color/colorPrimary"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/register_userid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasClearButton="false"
                    android:id="@+id/register_password_cont"
                    app:labelText="@string/user_password"
                    app:panelBackgroundColor="@color/white"
                    app:primaryColor="@color/text_color_title"
                    app:secondaryColor="@color/colorPrimary"
                    app:minCharacters="6"
                    app:endIcon="@drawable/eye_off"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/register_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasClearButton="false"
                    app:endIcon="@drawable/cancel"
                    app:labelText="@string/user_invitation_code"
                    app:panelBackgroundColor="@color/white"
                    app:primaryColor="@color/text_color_title"
                    app:secondaryColor="@color/colorPrimary"
                    app:useDenseSpacing="true">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/invitation_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="注册"
                android:id="@+id/goto_register"
                android:elevation="2dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/text_color_title"
                android:background="@drawable/button_background_corner" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/welcome_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_login" />

</androidx.constraintlayout.widget.ConstraintLayout>